<resources>
    <string name="app_name">Arora Task List</string>

    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="enter_todo_hint">e.g., Design a Game</string>-->
    <string name="enter_todo_hint">Enter a task description</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="add_todos">Add a Todo…</string>
    <string name="category_edit_text_hint">Add a new category…</string>
    <string name="new_category_button">Enter</string>
    <string name="delete_confirm_header">Do you want to permanently delete this task?</string>
    <string name="delete_button_text">Delete</string>
    <string name="back_button_from_delete_dialog">Go Back</string>
    <string name="delete_cat_button_string">Delete Empty Category</string>
    <string name="empty_cat_placeholder_text">You have finished all the tasks in this category</string>
    <string name="delete_cat_text">Do you want to delete this category?</string>
    <string name="save_task_image_button_descrip">Save Task</string>
    <string name="category_image_button_descrip">Categories</string>
    <string name="placeholder">Placeholder</string>
    <string name="action_settings">About</string>


    <string-array name="categories">
        <item>To Do List</item>
        <item>Completed</item>
    </string-array>

</resources>